number xx in the Inform extensions/libraries repositories.


Release 3.2.8 (2022-04-)
==========================

- Fixed status line being transparent
- Fixed vorple.file.info() possibly returning false instead of null in some 
  cases when reading a file failed
- Fixed audio queue not respecting the looping flag of upcoming tracks
- Added an optional parameter to vorple.debug.toggle() to set the debug flag
  to a specific state instead of flipping the current state


Release 3.2.7 (2022-04-11)
==========================

- Fixed a bug that prevented saving and restoring games


Release 3.2.6 (2022-02-17)
==========================

- Fixed the interpreter not loading gblorb files (#49) 
- Fixed UI blocking with vorple.layout.block() not working in some situations
- Added vorple.layout.isBlocked() for checking whether user input is blocked
- Updated jQuery to 3.6.0


Release 3.2.5 (2021-02-22)
==========================

- Fixed the character code from a keypress not being registered correctly when
  waiting for a keypress


Release 3.2.4 (2021-02-14)
==========================

No changes to the JavaScript libraries. See the Inform 7 changelog.


Release 3.2.3 (2020-09-03)
==========================

- Modified the source file structure so that it's easier to include Vorple in
  JavaScript projects with npm
- The HTML element container for the interpreter can be specified in the options
  object
- Command history API is now accessible through vorple.prompt.history in 
  addition to Haven's haven.prompt.history
- Silent or repeating commands are no longer added to the command history
- It's no longer necessary to manually specify autosave and engineColors options
  when initializing Vorple
- proxy_url option now defaults to the Parchment proxy 
  (https://zcode.appspot.com/proxy/)
- The default loading spinner icon is now "." (full stop) instead of "|" (pipe)
  if nothing else is specified. The Inform packages still use "V" as their